# full_pledged_Blog_app_with_FastAPI

./: README.md  main.py  pyproject.toml
blog_app/: main.py
crud_app/: main.py
server/: app.py  database.py  models.py
server/routes/: student.py  user.py
